[gd_scene load_steps=4 format=3 uid="uid://c8start_menu01"]

[ext_resource type="Script" path="res://scripts/ui/start_menu.gd" id="1_start_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.35, 0.45, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 24.0
content_margin_top = 24.0
content_margin_right = 24.0
content_margin_bottom = 24.0

[sub_resource type="ButtonGroup" id="ButtonGroup_lang"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.08, 0.12, 1)
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_start_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 42
text = "MENU_TITLE"
horizontal_alignment = 1

[node name="BtnNewGame" type="Button" parent="Center/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_NEW_GAME"

[node name="BtnContinue" type="Button" parent="Center/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_CONTINUE"

[node name="BtnSettings" type="Button" parent="Center/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_SETTINGS"

[node name="BtnQuit" type="Button" parent="Center/VBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "MENU_QUIT"

[node name="LangRow" type="HBoxContainer" parent="Center/VBox"]
layout_mode = 2
theme_override_constants/separation = 8
size_flags_horizontal = 4

[node name="BtnLangZh" type="CheckButton" parent="Center/VBox/LangRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
button_group = SubResource("ButtonGroup_lang")
toggle_mode = true
text = "LANG_ZH"

[node name="BtnLangEn" type="CheckButton" parent="Center/VBox/LangRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
button_group = SubResource("ButtonGroup_lang")
toggle_mode = true
text = "LANG_EN"

[node name="SlotSelectPanel" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="SlotSelectPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Center" type="CenterContainer" parent="SlotSelectPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="SlotSelectPanel/Center"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="SlotSelectPanel/Center/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="SlotSelectPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 20
text = "SLOT_SELECT_TITLE"
horizontal_alignment = 1

[node name="Slot0Row" type="HBoxContainer" parent="SlotSelectPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot0" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot0Row"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SLOT_EMPTY"

[node name="BtnDelete0" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot0Row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "BTN_DELETE"

[node name="Slot1Row" type="HBoxContainer" parent="SlotSelectPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot1" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot1Row"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SLOT_EMPTY"

[node name="BtnDelete1" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot1Row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "BTN_DELETE"

[node name="Slot2Row" type="HBoxContainer" parent="SlotSelectPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot2" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot2Row"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SLOT_EMPTY"

[node name="BtnDelete2" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot2Row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "BTN_DELETE"

[node name="Slot3Row" type="HBoxContainer" parent="SlotSelectPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot3" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot3Row"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SLOT_EMPTY"

[node name="BtnDelete3" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot3Row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "BTN_DELETE"

[node name="Slot4Row" type="HBoxContainer" parent="SlotSelectPanel/Center/Panel/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Slot4" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot4Row"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "SLOT_EMPTY"

[node name="BtnDelete4" type="Button" parent="SlotSelectPanel/Center/Panel/VBox/Slot4Row"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "BTN_DELETE"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="SlotSelectPanel"]
title = "CONFIRM_DELETE_TITLE"
dialog_text = "SLOT_DELETE_CONFIRM"
initial_position = 2

[node name="BtnCancel" type="Button" parent="SlotSelectPanel/Center/Panel/VBox"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "BTN_CANCEL"
